--- a/package.json
+++ b/package.json
@@ -28,6 +28,12 @@
     "pbkdf2": "^3.0.14",
     "randomstring": "^1.1.5",
     "readline-sync": "^1.4.9",
-    "serve-favicon": "~2.4.5"
+    "serialize-javascript": "1.0.0",
+    "lodash": "4.17.4",
+    "serve-favicon": "~2.4.5",
+    "minimist": "0.0.8",
+    "underscore": "1.3.3",
+    "hoek": "4.2.0",
+    "qs": "6.0.4"
   }
 }
